# llvm

./: -  .clang-format  .clang-tidy  .editorconfig  .gdbinit  .gitattributes  .gitignore  .mailmap  0001-Add-an-entry-point-wrapper-around-functions-llvm-pas.patch  0001-Fix-conflict-resolution-for-SPV_INTEL_runtime_aligne.patch  0001-Fix-the-collection-of-entry-point-interfaces-1334.patch  0001-Translate-function-attributes-incl.-parameter-attrs-.patch  1.p  CMakeLists.txt  CONTRIBUTING.md  From  LICENSE  NEW_OFFLOAD_MODEL.md  NoRDCNewOffloadModel.md  README.md  REQUIREMENTS.md  SECURITY.md  a.out  adapter.cpp  adapter.hpp  atan.diff  big-log-600.txt  command_buffer.cpp  commits.txt  common.cpp  common.hpp  context.cpp  context.hpp  conversions_store-dbg.spt  conversions_store-dbg.spv  conversions_store.spt  conversions_store.spv  data.json  deps.py  device.cpp  (+75 more)
SYCL/: CMakeLists.txt  README.md  helpers.hpp  lit.cfg.py  lit.site.cfg.py.in
SYCL/AOT/: accelerator.cpp  cpu.cpp  gpu.cpp  multiple-devices.cpp  spec_const_aot.cpp  with-llvm-bc.cpp
SYCL/Assert/: a.out  assert_in_kernels.cpp  assert_in_kernels.hpp  assert_in_kernels_ndebug.cpp  assert_in_kernels_win.cpp  assert_in_multiple_tus.cpp  assert_in_multiple_tus.hpp  assert_in_multiple_tus_one_ndebug.cpp  assert_in_multiple_tus_one_ndebug_win.cpp  assert_in_multiple_tus_win.cpp  assert_in_one_kernel.cpp  assert_in_one_kernel.hpp  assert_in_one_kernel_ndebug.cpp  assert_in_one_kernel_win.cpp  assert_in_simultaneous_kernels.cpp  assert_in_simultaneous_kernels.hpp  assert_in_simultaneous_kernels_win.cpp  assert_in_simultaneously_multiple_tus.cpp  assert_in_simultaneously_multiple_tus_one_ndebug.cpp
SYCL/AtomicRef/: accessor.cpp  add-emulated.cpp  add-native.cpp  add.cpp  add.h  add_atomic64.cpp  add_atomic64_generic.cpp  add_generic.cpp  add_generic_local.cpp  add_generic_local_native_fp.cpp  add_generic_native_fp.cpp  add_local.cpp  add_local_native_fp.cpp  add_native_fp.cpp  and.cpp  and.h  and_generic.cpp  and_generic_local.cpp  and_local.cpp  assignment.cpp  assignment.h  assignment_atomic64.cpp  assignment_atomic64_generic.cpp  assignment_generic.cpp  atomic_memory_order.cpp  atomic_memory_order.h  atomic_memory_order_acq_rel.cpp  atomic_memory_order_acq_rel.h  atomic_memory_order_acq_rel_atomic64.cpp  atomic_memory_order_acq_rel_atomic64_generic.cpp  atomic_memory_order_acq_rel_generic.cpp  atomic_memory_order_seq_cst.cpp  atomic_memory_order_seq_cst.h  atomic_memory_order_seq_cst_atomic64.cpp  atomic_memory_order_seq_cst_atomic64_generic.cpp  atomic_memory_order_seq_cst_generic.cpp  compare_exchange.cpp  compare_exchange.h  compare_exchange_atomic64.cpp  compare_exchange_atomic64_generic.cpp  (+75 more)
SYCL/BFloat16/: bfloat16_builtins.cpp  bfloat16_type.cpp  bfloat16_type.hpp  bfloat16_type_cuda.cpp  bfloat_hw.cpp
SYCL/Basic/: CMakeLists.txt  README.md  access_to_subset.cpp  alloc_pinned_host_memory.cpp  aspects.cpp  barrier_order.cpp  boolean.cpp  build_log.cpp  built-ins.cpp  code_location_e2e.cpp  compare_exchange_strong.cpp  context-with-multiple-devices.cpp  context.cpp  context_platforms.cpp  default_device.cpp  default_platform.cpp  device-selectors.cpp  device.cpp  device_code_dae.cpp  device_equality.cpp  device_event.cpp  device_implicitly_copyable.cpp  device_platform_interop.cpp  enqueue_barrier.cpp  event.cpp  event_creation.cpp  event_profiling_info.cpp  event_release.cpp  exceptions-SYCL-2020.cpp  get_backend.cpp  get_nonhost_devices.cpp  gpu_max_wgs_error.cpp  group_async_copy.cpp  group_local_id.cpp  half_builtins.cpp  half_type.cpp  helpers.hpp  host-task-dependency.cpp  host_always_works.cpp  host_platform_avail.cpp  (+46 more)
SYCL/Complex/: sycl_complex_helper.hpp  sycl_complex_math_test.cpp  sycl_complex_math_test_cases.hpp  sycl_complex_operator_test.cpp  sycl_complex_operator_test_cases.hpp  sycl_complex_pow_test.cpp  sycl_complex_stream_test.cpp
SYCL/Config/: allowlist.cpp  config.cpp  device_selector.cpp  env_vars.cpp  kernel_from_file.cpp  program_link.cpp  select_device.cpp
SYCL/DeprecatedFeatures/: basic-program.cpp  basic.cpp  basic.hpp  buffer_interop.cpp  cuda_program_interop.cpp  deprecated.cpp  deprecated_intel_ext_device.cpp  deprecated_sycl_device_filter.cpp  device_platform_interop.cpp  event_creation_opencl.cpp  get-options.cpp  get_backend.cpp  kernel-and-program-interop.cpp  (+20 more)
examples/: CMakeLists.txt
libclc/: CMakeLists.txt  compile-test.sh
libdevice/: .clangd  .gitignore  CMakeLists.txt  assert-happened.hpp  atomic.hpp  bfloat16_wrapper.cpp  cassert_wrapper.cpp  cextmath_wrapper.cpp  cmath_wrapper.cpp  cmath_wrapper_fp64.cpp  complex_wrapper.cpp  complex_wrapper.hpp  complex_wrapper_fp64.cpp  crt_wrapper.cpp  device.h  device_assert.h  device_complex.h  device_imf.hpp  device_itt.h  device_math.h  devicelib_assert.h  devicelib_combine.cpp  fallback-bfloat16.cpp  fallback-cassert.cl  fallback-cassert.cpp  fallback-cextmath.cpp  fallback-cmath-fp64.cpp  fallback-cmath-fp64.hpp  fallback-cmath.cpp  fallback-cmath.hpp  fallback-complex-fp64.cpp  fallback-complex-fp64.hpp  fallback-complex.cpp  fallback-complex.hpp  fallback-cstring.cpp  fallback-cstring.hpp  fallback-gsort.cpp  fallback-imf.cpp  glibc_wrapper.cpp  group_helper.hpp  (+21 more)
llvm-spirv/: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  spirv-headers-tag.conf
mlir-sycl/: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING  README.md
opencl/: CMakeLists.txt
opencl-aot/: .gitignore  CMakeLists.txt  README.md
orc-rt/: CMakeLists.txt
polygeist/: AddClang.cmake  CMakeLists.txt  README.md
source/: CMakeLists.txt  ur_api.cpp  zer_api.cpp
sycl/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.TXT  ReleaseNotes.md  a.out  libpi.cmake  piapi.cmake  poc-properties.cpp  test_bfloat.cpp
sycl-compress/: CMakeLists.txt
sycl-fusion/: CMakeLists.txt
sycl-jit/: CMakeLists.txt  README.md
test/: CMakeLists.txt
xpti/: CMakeLists.txt  README.md  xpti.pc.in  xptiConfig.cmake.in
xptifw/: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  xptifw.pc.in  xptifwConfig.cmake.in
(+79736 files in other folders)
